// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#buildOrganizationGroupRelationships should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Group",
      ],
      "_key": "zendesk_group:360021738231",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "default": true,
            "deleted": false,
            "description": "",
            "id": 360021738231,
            "name": "Support",
            "updated_at": "2021-10-10T20:49:30Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/groups/360021738231.json",
          },
        },
      ],
      "_type": "zendesk_group",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "deleted": false,
      "description": "",
      "displayName": "Support",
      "id": "360021738231",
      "name": "Support",
      "updatedAt": "2021-10-10T20:49:30Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/groups/360021738231.json",
    },
    Object {
      "_class": Array [
        "Organization",
      ],
      "_key": "zendesk_organization:361584776731",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "details": "",
            "domain_names": Array [],
            "external_id": null,
            "group_id": 360021738231,
            "id": 361584776731,
            "name": "JupiterOne",
            "notes": "",
            "organization_fields": Object {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": Array [],
            "updated_at": "2021-11-05T16:50:42Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "details": Array [],
      "displayName": "JupiterOne",
      "domainNames": Array [],
      "groupId": "360021738231",
      "id": "361584776731",
      "name": "JupiterOne",
      "notes": Array [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2021-11-05T16:50:42Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_organization:361584776731",
      "_key": "zendesk_organization:361584776731|has|zendesk_group:360021738231",
      "_toEntityKey": "zendesk_group:360021738231",
      "_type": "zendesk_organization_has_group",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_group",
    "zendesk_organization",
    "zendesk_organization_has_group",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;

exports[`#fetchOrganizations should collect data 1`] = `
Object {
  "collectedEntities": Array [
    Object {
      "_class": Array [
        "Account",
      ],
      "_key": "zendesk_account:jupiterone-dev",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "multiproduct": true,
            "name": "JupiterOne",
            "owner_id": 420755677092,
            "sandbox": false,
            "subdomain": "jupiterone-dev",
            "time_format": 24,
            "time_zone": "America/New_York",
            "url": "https://jupiterone-dev.zendesk.com",
          },
        },
      ],
      "_type": "zendesk_account",
      "accessURL": "https://jupiterone-dev.zendesk.com",
      "accountId": "jupiterone-dev",
      "createdOn": undefined,
      "displayName": "JupiterOne",
      "name": "JupiterOne",
    },
    Object {
      "_class": Array [
        "Organization",
      ],
      "_key": "zendesk_organization:361584776731",
      "_rawData": Array [
        Object {
          "name": "default",
          "rawData": Object {
            "created_at": "2021-10-10T20:49:30Z",
            "details": "",
            "domain_names": Array [],
            "external_id": null,
            "group_id": 360021738231,
            "id": 361584776731,
            "name": "JupiterOne",
            "notes": "",
            "organization_fields": Object {},
            "shared_comments": false,
            "shared_tickets": false,
            "tags": Array [],
            "updated_at": "2021-11-05T16:50:42Z",
            "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
          },
        },
      ],
      "_type": "zendesk_organization",
      "createdAt": "2021-10-10T20:49:30Z",
      "createdOn": undefined,
      "details": Array [],
      "displayName": "JupiterOne",
      "domainNames": Array [],
      "groupId": "360021738231",
      "id": "361584776731",
      "name": "JupiterOne",
      "notes": Array [],
      "sharedComments": false,
      "sharedTickets": false,
      "updatedAt": "2021-11-05T16:50:42Z",
      "url": "https://jupiterone-dev.zendesk.com/api/v2/organizations/361584776731.json",
    },
  ],
  "collectedRelationships": Array [
    Object {
      "_class": "HAS",
      "_fromEntityKey": "zendesk_account:jupiterone-dev",
      "_key": "zendesk_account:jupiterone-dev|has|zendesk_organization:361584776731",
      "_toEntityKey": "zendesk_organization:361584776731",
      "_type": "zendesk_account_has_organization",
      "displayName": "HAS",
    },
  ],
  "encounteredTypes": Array [
    "zendesk_account",
    "zendesk_organization",
    "zendesk_account_has_organization",
  ],
  "numCollectedEntities": 2,
  "numCollectedRelationships": 1,
}
`;
